styles/globals.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500&display=swap');

@font-face {
  font-family: 'sofia-pro';
  src: url('https://monday.com/static/fonts/woff2/normal.woff2') format('woff2');
}


html,
body {
  padding: 0;
  margin: 0;
  font-family: Roboto, Rubik, Noto Kufi Arabic, Noto Sans JP, sans-serif;
  /* font-family: 'sofia-pro'; */
  src: url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500&display=swap');
  /* src: url('https://monday.com/static/fonts/woff2/normal.woff2') format('woff2'); */
  color: #323338;



  -webkit-touch-callout: none;
  /* iOS Safari */
  -webkit-user-select: none;
  /* Safari */
  -khtml-user-select: none;
  /* Konqueror HTML */
  -moz-user-select: none;
  /* Old versions of Firefox */
  -ms-user-select: none;
  /* Internet Explorer/Edge */
  user-select: none;
  /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */

}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}


html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  vertical-align: baseline;
}






.divvvvv {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
}



[data-is-dragging-over='true'] {
  /* flex-grow: 1;/ */

  /*  */

}

.rowBackDrop:not(:first-child) {
  background-color: blue;

}

.MuiSpeedDialAction-staticTooltip span {
  /* background-color: blue; */
  width: 6.5rem;
  display: inline-flex;
  font-size: 0.85rem;
  text-align: center;

}


.MuiSpeedDial-root button {
  background-color: #0073ea !important;
}

.MuiBackdrop-root {
  opacity: 0.2 !important;
}

.css-1ytz6dp{
  display: none;
}

.css-151dxxb{
  background-color: transparent;
}

